--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Telegram Torrent Leecher",
-  "description": "A Telegram Torrent (and youtube-dl) Leecher based on Pyrogram. Powered by @ThankTelegram!",
+  "name": "Telegram Finee",
+  "description": "A Telegram Powered by @ThankTelegram!",
   "keywords": [
     "telegram",
     "best",
